Fix scrollbar with overflow hidden
If scrollbar is set only in :root, the scrollbar keeps showing when the
body has `overflow: hidden`

--- a/src/assets/browser_firefox--userContent.css
+++ b/src/assets/browser_firefox--userContent.css
@@ -1,3 +1,4 @@
-:root {
+:root,
+body {
   scrollbar-width: thin;
 }
